--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,31 @@
 charger.philfan.cn {
+    root * web
+    
+    handle_errors {
+        @5xx expression `{http.error.status_code} >= 500 && {http.error.status_code} < 600`
+        handle @5xx {
+            rewrite * /50x.html
+            file_server
+        }
+        
+        @404 expression `{http.error.status_code} == 404`
+        handle @404 {
+            rewrite * /404.html
+            file_server
+        }
+        
+        @403 expression `{http.error.status_code} == 403`
+        handle @403 {
+            rewrite * /403.html
+            file_server
+        }
+        
+        handle {
+            rewrite * /50x.html
+            file_server
+        }
+    }
+    
     reverse_proxy 127.0.0.1:9898
     tls hw.phil.fan@gmail.com
 }
